# xyraiq-benchmark

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  governance.md
.github/workflows/: ci.yml
docs/: governance.md  overview.md  scoring-engine.md
examples/: tier1_demo.yaml
src/xyraiq/: cli.py  pyproject.toml
src/xyraiq/detectors/: base.py  hallucination.py
tests/: test_run_demo.py
