[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xyraiq"
version = "0.1.0"
description = "Cognitive resilience benchmark for LLMs"
authors = [{name = "George N."}]
license = {text = "Apache-2.0"}

[project.scripts]
xyraiq = "xyraiq.cli:run"
